Bug 595445 - Factor out geolocation prompt into something that can be reused - Part 2 r=olli a=mfinkle